# vision_detect_segment

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_YOLOE.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: add-badges.yml  auto-version.yml  lint.yml  tests.yml
docs/: INSTALL.md  README.md  TESTING.md  api.md  metrics_documentation.md  vision_workflow_doc.md  workflow_simple.mmd
docs/diagrams/: workflow_detailed.mmd
docs/tex/: detailed_workflow_tikz.tex  vision_uml_diagram.tex  workflow_tikz.tex
scripts/: detect_objects_async.py  detect_objects_publish_annotated_frames.py  detect_objects_publish_annotated_frames_async.py  redis_stream_inspector.py  visualize_label_stability.py
tests/: __init__.py  conftest.py  test_config.py  test_detector.py  test_exceptions.py  test_segmenter.py  test_tracker.py  test_utils.py  test_visualcortex.py  test_visualcortex_async.py
tests/integration/: test_integration_1.py  test_integration_2.py  test_integration_3.py  test_integration_annotation.py  test_integration_memory.py  test_integration_redis.py  test_integration_tracking.py
tests/unit/: test_async_processor.py  test_batch_processor.py  test_config.py  test_detector.py  test_detector_enhanced.py  test_exceptions.py  test_segmenter.py  test_tracker.py  test_utils.py  test_visualcortex.py  test_visualcortex_async.py
vision_detect_segment/: __init__.py  config.py  exceptions.py  object_detector.py  object_segmenter.py  object_tracker.py  utils.py  visualcortex.py
vision_detect_segment/core/: __init__.py  async_processor.py  interfaces.py  object_detector.py  object_segmenter.py  object_tracker.py  visualcortex.py  visualcortex_async.py  visualcortex_metrics.py
vision_detect_segment/core/detectors/: base.py  owlv2.py  yolo.py  yoloe.py
vision_detect_segment/segment/: __init__.py  edgetam_segment.py  factory.py
vision_detect_segment/utils/: __init__.py  batch_processor.py  circuit_breaker.py  config.py  exceptions.py  metrics.py  metrics_exporter.py  model_loader.py  redis_helpers.py  retry.py  utils.py
