[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_detect_segment"
version = "0.1.0"
description = "Object detection and segmentation in an image stream send via a Redis Broker"
authors = [
    { name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "torch",
    "redis_robot_comm @ git+https://github.com/dgaida/redis_robot_comm.git",
]

[project.urls]
Homepage = "https://github.com/dgaida/vision_detect_segment"
Repository = "https://github.com/dgaida/vision_detect_segment"

[tool.setuptools]
packages = ["vision_detect_segment"]

[tool.setuptools.package-data]
vision_detect_segment = ["py.typed"]
