[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision_detect_segment"
version = "0.1.0"
description = "Object detection and segmentation in an image stream send via a Redis Broker"
authors = [
    { name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "computer-vision",
    "object-detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "torch",
    "transformers",
    "supervision",
    "ultralytics",
    "redis_robot_comm @ git+https://github.com/dgaida/redis_robot_comm.git",
]

[project.urls]
Homepage = "https://github.com/dgaida/vision_detect_segment"
Repository = "https://github.com/dgaida/vision_detect_segment"

[tool.setuptools.packages.find]
where = ["."]
include = ["vision_detect_segment*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
vision_detect_segment = ["py.typed"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=vision_detect_segment",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
